Fix text alignment and set max-width for paragraphs

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
   text-align: center;
 }
 .about p {
-  text-algin: justify;
+  max-width: 600px;
+  text-align: justify;
 }
 
 
@@ -103,7 +104,13 @@ h2 {
 /* QA */
 .qa-intro {
   max-width: 600px;
+  text-align: justify;
 }
+.database-intro {
+  max-width: 600px;
+  text-align: justify;
+}
+
 
 .qa-grid {
   display: grid;
